[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdss"
version = "0.1.0"
description = "Python Data Science Summary Tools"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["."]
